--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <!--Навигация-->
       <nav>
         <a lang="en" href="">WebStudio</a>
         <ul>
@@ -16,8 +17,23 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <!--Почта и телефон-->
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
+    <main>
+      <!--Герой-->
+      <section>
+        <h1>
+          <b>
+            Эффективные решения <br />
+            для вашего бизнеса
+          </b>
+        </h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+    </main>
   </body>
 </html>
