--- a/index.html
+++ b/index.html
@@ -34,6 +34,40 @@
         </h1>
         <button type="button">Заказать услугу</button>
       </section>
+      <!--Особенности-->
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>
+              <b>Внимание к деталям</b>
+            </h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>
+              <b>Пунктуальность</b>
+            </h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>
+              <b>Планирование</b>
+            </h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>
+              <b>Современные технологии</b>
+            </h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
