Добавляет секцию Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
           </li>
         </ul>
       </section>
+      <!--Чем мы занимаемся-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li><img src="./images/action-1.jpg" alt="Человек печатает на клавиатуре" /></li>
+          <li><img src="./images/action-2.jpg" alt="Человек держит телефон в руках" /></li>
+          <li>
+            <img src="./images/action-3.jpg" alt="Человек смотрит на палитру цветов на планшете" />
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
