Корректирует разметку в секциях
- убирает теги <b>
- добавляет размер изображения в секцию Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
     <main>
       <!--Герой-->
       <section>
-        <h1>
-          <b>
-            Эффективные решения <br />
-            для вашего бизнеса
-          </b>
-        </h1>
+        <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
       <!--Особенности-->
@@ -39,31 +34,23 @@
         <h2>Особенности</h2>
         <ul>
           <li>
-            <h3>
-              <b>Внимание к деталям</b>
-            </h3>
+            <h3>Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h3>
-              <b>Пунктуальность</b>
-            </h3>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>
-              <b>Планирование</b>
-            </h3>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>
-              <b>Современные технологии</b>
-            </h3>
+            <h3>Современные технологии</h3>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
@@ -72,10 +59,18 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./images/action-1.jpg" alt="Человек печатает на клавиатуре" /></li>
-          <li><img src="./images/action-2.jpg" alt="Человек держит телефон в руках" /></li>
           <li>
-            <img src="./images/action-3.jpg" alt="Человек смотрит на палитру цветов на планшете" />
+            <img src="./images/action-1.jpg" alt="Человек печатает на клавиатуре" width="370" />
+          </li>
+          <li>
+            <img src="./images/action-2.jpg" alt="Человек держит телефон в руках" width="370" />
+          </li>
+          <li>
+            <img
+              src="./images/action-3.jpg"
+              alt="Человек смотрит на палитру цветов на планшете"
+              width="370"
+            />
           </li>
         </ul>
       </section>
