Убирает лишний знак "

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/team-2.jpg"" alt="Ольга Репина" width="270" />
+            <img src="./images/team-2.jpg" alt="Ольга Репина" width="270" />
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
