--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
       <!--Особенности-->
       <section>
-        <h2>Особенности</h2>
+        <h2 hidden>Особенности</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -101,5 +101,22 @@
         </ul>
       </section>
     </main>
+    <footer>
+      <address>
+        <ul>
+          <li><a lang="en" href="">WebStudio</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/WmQ8H7zUFMjticRU9"
+              target="_blank"
+              rel="noopener, noindex, nofollow"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
