Убирает лишние запятые

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <a
               href="https://goo.gl/maps/WmQ8H7zUFMjticRU9"
               target="_blank"
-              rel="noopener, noindex, nofollow"
+              rel="noopener noindex nofollow"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
