--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </main>
     <footer>
       <address>
+        <!-- Контакты -->
         <ul>
           <li><a lang="en" href="">WebStudio</a></li>
           <li>
