--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
       </section>
     </main>
     <footer>
+      <a lang="en" href="">WebStudio</a>
       <address>
         <!-- Контакты -->
         <ul>
-          <li><a lang="en" href="">WebStudio</a></li>
           <li>
             <a
               href="https://goo.gl/maps/WmQ8H7zUFMjticRU9"
